Endpoint busca api key e update
