# app/Http/Requests/Auth/ApiKeys/UpdateApiKeyRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests\Auth\ApiKeys;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class CreateApiKeyRequest extends FormRequest
+class UpdateApiKeyRequest extends FormRequest
 {
     public function authorize(): bool
     {
@@ -16,11 +16,11 @@ class CreateApiKeyRequest extends FormRequest
         $validScopes = ['read', 'write', 'delete', 'update'];
 
         return [
-            'name' => 'required|string',
-            'name' => 'required|string',
-            'scopes' => 'nullable|array',
+            'name' => 'sometimes|string',
+            'active' => 'sometimes|boolean',
+            'scopes' => 'sometimes|array',
             'scopes.*' => 'in:' . implode(',', $validScopes),
-            'expires_at' => 'nullable|date',
+            'expires_at' => 'sometimes|nullable|date',
         ];
     }
 }
